--- a/RealEstateApp/templates/property/create_property.html
+++ b/RealEstateApp/templates/property/create_property.html
@@ -1,8 +1,9 @@
 {% include 'base.html' %} {% block content %}
 <h1>Add The Property</h1>
-
+<div class ="container"
 <form method="post">
   {% csrf_token %} {{form.as_p}}
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+</div>
 {% endblock %}
