--- a/RealEstateApp/templates/property/list_property.html
+++ b/RealEstateApp/templates/property/list_property.html
@@ -1,24 +1,23 @@
 {% include 'base.html' %} {% block content %}
 <h1 class="text-center">List The Property</h1>
-
+<hr />
 <div class="container justify-content-center mt-4">
   <div class="row">
-    <table class="table text-center">
-      <thead class="thead-light">
-        <tr>
-          <th scope="col">SL No</th>
-          <th scope="col">Property Name</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for property in properties %}
-        <tr>
-          <th scope="row">{{ forloop.counter }}</th>
-          <td>{{property.property_name}}</td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+    {% for property in properties %}
+    <div class="card me-2" style="width: 18rem">
+      <div class="card-body">
+        <h5 class="card-title">{{property.property_name}}</h5>
+        <p class="card-text">{{property.cost}}</p>
+        <p class="card-text">{{property.property_status}}</p>
+        <p class="card-text">{{property.contact_number}}</p>
+        <p class="card-text">{{property.Description}}</p>
+        <p class="card-text">
+          {{property.Address.street}},{{property.Address.city}},{{property.Address.country}}
+          {{property.Address.zip_code}}
+        </p>
+      </div>
+    </div>
+    {% endfor %}
   </div>
 </div>
 
