--- a/RealEstateApp/templates/home.html
+++ b/RealEstateApp/templates/home.html
@@ -1,6 +1,7 @@
 <h1>Hello</h1>
 
 <h2>This is home page...</h2>
+{{request.user.username}}
 <form class="d-flex" action="/searchproperty/">
   <input
     name="city"
