Added count properties,day wise, month wise

--- a/AdminUser/templates/admin/adminDashboard.html
+++ b/AdminUser/templates/admin/adminDashboard.html
@@ -29,19 +29,19 @@
     <div class="col-4">
       <div class="card" style="width: 350px; height: 200px">
         <p>Total Listings</p>
-        <p></p>
+        <p>{{count_property}}</p>
       </div>
     </div>
     <div class="col-4">
       <div class="card" style="width: 350px; height: 200px">
         <p>Last 24 hours Listings</p>
-        <p></p>
+        <p>{{last_day_count_property}}</p>
       </div>
     </div>
     <div class="col-4">
       <div class="card" style="width: 350px; height: 200px">
         <p>Last 30 days Listings</p>
-        <p></p>
+        <p>{{last_month_count_property}}</p>
       </div>
     </div>
   </div>
