--- a/RealEstateApp/templates/property/list_property.html
+++ b/RealEstateApp/templates/property/list_property.html
@@ -4,16 +4,15 @@
 <div class="container justify-content-center mt-4">
   <div class="row">
     {% for property in properties %}
-    <div class="card me-2" style="width: 18rem">
+    <div class="card me-2" style="width: 12rem">
       <div class="card-body">
-        <h5 class="card-title">{{property.property_name}}</h5>
-        <p class="card-text">{{property.cost}}</p>
-        <p class="card-text">{{property.property_status}}</p>
-        <p class="card-text">{{property.contact_number}}</p>
-        <p class="card-text">{{property.Description}}</p>
-        <p class="card-text">
-          {{property.Address.street}},{{property.Address.city}},{{property.Address.country}}
-          {{property.Address.zip_code}}
+        <p class="card-text text-danger" style="font-size: 0.6rem">
+          {{property.room_type}} - {{property.beds}} {% if property.beds == 1 %}
+          Bed {% else %} Beds {% endif %}
+        </p>
+        <p class="card-title h6">{{property.property_name}}</p>
+        <p class="card-text" style="font-size: 0.6rem">
+          R${{property.cost}} Per Night
         </p>
       </div>
     </div>
