--- a/RealEstateApp/templates/property/search_property.html
+++ b/RealEstateApp/templates/property/search_property.html
@@ -5,35 +5,32 @@
 <hr />
 <div class="container justify-content-center mt-4">
   <div class="row">
-    {% if not properties %}
-    {% if not propertiess %}
+    {% if not properties %} {% if not propertiess %}
     <h4 class="text-center">No Property found</h4>
-    {% endif %}
-    {% endif %} {% for property in properties %}
-    <div class="card" style="width: 18rem">
+    {% endif %} {% endif %} {% for property in properties %}
+    <div class="card" style="width: 12rem">
       <div class="card-body">
-        <h5 class="card-title">{{property.property.property_name}}</h5>
-        <p class="card-text">{{property.property.cost}}</p>
-        <p class="card-text">{{property.property.property_status}}</p>
-        <p class="card-text">{{property.property.contact_number}}</p>
-        <p class="card-text">{{property.property.Description}}</p>
-        <p class="card-text">
-          {{property.property.Address.street}},{{property.property.Address.city}},{{property.property.Address.country}}
-          {{property.property.Address.zip_code}}
+        <p class="card-text text-danger" style="font-size: 0.6rem">
+          &nbsp;&nbsp;{{property.property.room_type}} -
+          {{property.property.beds}} {% if property.beds == 1 %} Bed {% else %}
+          Beds {% endif %}
+        </p>
+        <p class="card-title h6">{{property.property.property_name}}</p>
+        <p class="card-text" style="font-size: 0.7rem">
+          {{property.property.cost}}
         </p>
       </div>
     </div>
     {% endfor %} {% for property in propertiess %}
-    <div class="card me-2" style="width: 18rem">
+    <div class="card me-2" style="width: 12rem">
       <div class="card-body">
-        <h5 class="card-title">{{property.property_name}}</h5>
-        <p class="card-text">{{property.cost}}</p>
-        <p class="card-text">{{property.property_status}}</p>
-        <p class="card-text">{{property.contact_number}}</p>
-        <p class="card-text">{{property.Description}}</p>
-        <p class="card-text">
-          {{property.Address.street}},{{property.Address.city}},{{property.Address.country}}
-          {{property.Address.zip_code}}
+        <p class="card-text text-danger" style="font-size: 0.6rem">
+          {{property.room_type}} - {{property.beds}} {% if property.beds == 1 %}
+          Bed {% else %} Beds {% endif %}
+        </p>
+        <p class="card-title h6">{{property.property_name}}</p>
+        <p class="card-text" style="font-size: 0.6rem">
+          R${{property.cost}} Per Night
         </p>
       </div>
     </div>
