--- a/BookingApp/templates/detail_view.html
+++ b/BookingApp/templates/detail_view.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="main">
     
-     Specify fields to be displayed
+     <!-- Specify fields to be displayed -->
     {{ data.gender }}<br/>
     {{ data.firstname }}<br/>
     {{  data.lastname }}<br>
@@ -17,7 +17,7 @@
     {{  data.cost }}<br>
     {{  data.notes }}<br>
 
-</div> 
+</div>
 
 
 
