--- a/BookingApp/templates/create_booking.html
+++ b/BookingApp/templates/create_booking.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1>Add The Property</h1>
 
-<form method="post">
+<form method="post" action="/booking/list_view/">
   {% csrf_token %} {{form.as_p}}
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
