admin dashboard reservations

--- a/AdminUser/templates/admin/adminDashboard.html
+++ b/AdminUser/templates/admin/adminDashboard.html
@@ -49,19 +49,19 @@
     <div class="col-4">
       <div class="card" style="width: 350px; height: 200px">
         <p>Total Reservations</p>
-        <p></p>
+        <p>{{count_booking}}</p>
       </div>
     </div>
     <div class="col-4">
       <div class="card" style="width: 350px; height: 200px">
         <p>Last 24 hours Reservations</p>
-        <p></p>
+        <p>{{last_day_count_booking}}</p>
       </div>
     </div>
     <div class="col-4">
       <div class="card" style="width: 350px; height: 200px">
         <p>Last 30 days Reservations</p>
-        <p></p>
+        <p>{{last_month_count_booking}}</p>
       </div>
     </div>
   </div>
