--- a/RealEstateApp/templates/base.html
+++ b/RealEstateApp/templates/base.html
@@ -12,8 +12,9 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-
+<style>
     {% block style %} {% endblock %}
+    </style>
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
