--- a/RealEstateApp/templates/property/list_property.html
+++ b/RealEstateApp/templates/property/list_property.html
@@ -4,7 +4,8 @@
 <div class="container justify-content-center mt-4">
   <div class="row">
     {% for property in properties %}
-    <div class="card me-2" style="width: 12rem">
+    <div class="card me-2 mt-4" style="width: 12rem">
+    <img src="{% if property.image %}{{ property.image.url }}{% endif %}" class="card-img-top mt-2" style="height:200px;width:100%;">
       <div class="card-body">
         <p class="card-text text-danger" style="font-size: 0.6rem">
           {{property.room_type}} - {{property.beds}} {% if property.beds == 1 %}
