display a particular property and top 5 most viewed and most viewed properties

--- a/RealEstateApp/templates/property/create_property.html
+++ b/RealEstateApp/templates/property/create_property.html
@@ -78,7 +78,7 @@
   </div>
 {% endfor %}
 
- <div class="drop-zone">
+ <div class="drop-zone mt-2">
                 <span class="drop-zone__prompt">Drop file here or click to upload</span>
                 <input type="file" name="myFile" class="drop-zone__input">
             </div>
