navbar,slide added

--- a/BookingApp/templates/list_view.html
+++ b/BookingApp/templates/list_view.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'bookingpage/base.html' %}
 {% load static %}
 {% block content %}
 
@@ -16,7 +16,6 @@
       <th scope="col">date_from</th>
       <th scope="col">date_until</th>
       <th scope="col">creation_date</th>
-      <th scope="col">booking_status</th>
       <th scope="col">booking_status</th>
       <th scope="col">cost</th>
       <th scope="col">notes</th>
