--- a/BookingApp/templates/create_view.html
+++ b/BookingApp/templates/create_view.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'bookingpage/base.html' %}
 {% load static %}
 {% block content %}
 <form method="POST" enctype="multipart/form-data" action="booking/list_view/">
