--- a/BookingApp/templates/update_view.html
+++ b/BookingApp/templates/update_view.html
@@ -1,7 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'bookingpage/base.html' %}
 {% load static %}
 <div class="main">
 	<!-- Create a Form -->
+	hello................
 	<form method="POST">
 		<!-- Security token by Django -->
 		{% csrf_token %}
