--- a/RealEstateApp/templates/base.html
+++ b/RealEstateApp/templates/base.html
@@ -18,6 +18,31 @@
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">RealeState</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse " id="navbarScroll">
+      <ul class="navbar-nav my-2 my-lg-0 navbar-nav-scroll  ms-auto" style="--bs-scroll-height: 100px;">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link" href="#">Link</a>
+          
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Login</a>
+            </li>
+      </ul>
+    </div>
+  </div>
+</nav>
     {% block content %} {% endblock %}
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -25,5 +50,6 @@
       crossorigin="anonymous"
     ></script>
     {% block javascript %} {% endblock %}
+
   </body>
 </html>
