added footer home Page

--- a/BookingApp/templates/bookingpage/home1.html
+++ b/BookingApp/templates/bookingpage/home1.html
@@ -7,6 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="stylesheet" href="{% static 'css/navbar.css' %}"/>
    <link rel="stylesheet" href="{% static 'css/img_slider.css' %}"/>
+   <link rel="stylesheet" href="{% static 'css/booking_table.css' %}"/>
    <title>Document</title>
  </head>
  <body>
@@ -37,5 +38,7 @@
      </ul>
    </nav>
    {% include 'bookingpage/img_slider.html'%}
+   {% include 'bookingpage/booking_table.html'%}
+   {% include 'bookingpage/footer.html'%}
  </body>
 </html>
