--- a/BookingApp/templates/bookingpage/img_slider.html
+++ b/BookingApp/templates/bookingpage/img_slider.html
@@ -1,8 +1,6 @@
 {% load static %}
 
-
-
-<div class="slideshow-container">
+<div class="slideshow-container container-fluid">
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
@@ -51,3 +49,4 @@ function showSlides() {
   setTimeout(showSlides, 2000); // Change image every 2 seconds
 }
 </script>
+
