--- a/AdminUser/templates/admin/adminManageUser.html
+++ b/AdminUser/templates/admin/adminManageUser.html
@@ -1,7 +1,7 @@
 {% extends 'admin/adminPanel.html' %} {% block adminContent %}
 
 <h3>Manage Admin Users</h3>
-
+<a class="btn btn-primary" href="{% url 'admin_user:admin_register_user' %}">Add New Admin User</a>
 <table class="table">
   <thead>
     <tr>
