delete admin user functionality

--- a/AdminUser/templates/admin/adminManageUser.html
+++ b/AdminUser/templates/admin/adminManageUser.html
@@ -20,7 +20,7 @@
       <td>{{user.email}}</td>
       <td>
         <a class="text-decoration-none" href="#">Edit</a>
-        <a class="text-decoration-none" href="#">Delete</a>
+        <a class="text-decoration-none" href="{% url 'admin_user:delete_admin_user' pk=user.id %}">Delete</a>
       </td>
     </tr>
     {% endfor %}
