--- a/BookingApp/static/css/booking_table.css
+++ b/BookingApp/static/css/booking_table.css
@@ -200,7 +200,7 @@ select.tm-select.form-control:not([size]):not([multiple]) { height: 100%; }
 }*/
 
 /* https://stackoverflow.com/questions/20163079/remove-select-arrow-on-ie */
-select.tm-select::-ms-expand { display: none; }
+/*select.tm-select::-ms-expand { display: none; }
 
 .tm-select {
     border-radius: 0;
@@ -223,7 +223,7 @@ select.tm-select::-ms-expand { display: none; }
   top: -1px;
   width: 100%;
   height: 100px;
-}
+}*/
 
 .tm-pt-5 { padding-top: 150px; }
 .tm-pb-4 { padding-bottom: 100px; }
