--- a/BookingApp/templates/bookingpage/base.html
+++ b/BookingApp/templates/bookingpage/base.html
@@ -7,7 +7,26 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- home page of booking-->
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}"/>
+   <link rel="stylesheet" href="{% static 'css/img_slider.css' %}"/>
+   <link rel="stylesheet" href="{% static 'css/booking_table.css' %}"/>
+   <link rel="stylesheet" href="{% static 'css/footer.css' %}"/>
+   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"/>
+
+
+
+
+
+
+    <link rel="stylesheet" href="{% static 'css/side_bar.css' %}"/>
     <link rel="stylesheet" href="{% static 'css/side_bar.css' %}"/>
 
     <!-- Bootstrap CSS -->
