--- a/BookingApp/templates/bookingpage/home1.html
+++ b/BookingApp/templates/bookingpage/home1.html
@@ -8,6 +8,18 @@
    <link rel="stylesheet" href="{% static 'css/navbar.css' %}"/>
    <link rel="stylesheet" href="{% static 'css/img_slider.css' %}"/>
    <link rel="stylesheet" href="{% static 'css/booking_table.css' %}"/>
+   <link rel="stylesheet" href="{% static 'css/footer.css' %}"/>
+   <link rel="stylesheet" href="{% static 'css/contact.css' %}"/>
+   <link rel="stylesheet" href="{% static 'css/recommended.css' %}"/>
+   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"/>
    <title>Document</title>
  </head>
  <body>
@@ -19,26 +31,24 @@
        <!-- <label for="checkbox_toggle" class="hamburger">&#9776;</label> -->
        <!-- NAVIGATION MENUS -->
        <div class="menu">
-         <li><a href="/">Home</a></li>
+         <li><a href="/booking/home1/">Home</a></li>
          <li><a href="/">About</a></li>
          <li class="services">
            <a href="/">Services</a>
            <!-- DROPDOWN MENU -->
-           <ul class="dropdown">
-             <li><a href="/">Dropdown 1 </a></li>
-             <li><a href="/">Dropdown 2</a></li>
-             <li><a href="/">Dropdown 2</a></li>
-             <li><a href="/">Dropdown 3</a></li>
-             <li><a href="/">Dropdown 4</a></li>
-           </ul>
+           
          </li>
          <li><a href="/">Hotel list</a></li>
-         <li><a href="/">Contact</a></li>
+         <li><a href="/booking/contact/">Contact</a></li>
        </div>
      </ul>
    </nav>
+   {% block content %}
+   {% endblock %}
    {% include 'bookingpage/img_slider.html'%}
    {% include 'bookingpage/booking_table.html'%}
+   {% include 'bookingpage/recommended.html'%}
    {% include 'bookingpage/footer.html'%}
+
  </body>
 </html>
