--- a/BookingApp/templates/bookingpage/img_slider.html
+++ b/BookingApp/templates/bookingpage/img_slider.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="slideshow-container container-fluid">
+<div class="slideshow-container" style="width:">
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
