--- a/AdminUser/templates/admin/adminPanel.html
+++ b/AdminUser/templates/admin/adminPanel.html
@@ -15,7 +15,10 @@
           >Manage Admin Users</a
         >
       </li>
-      <li class="list-group-item">Third item</li>
+      <li class="list-group-item"><a
+          class="text-decoration-none"
+          href="{% url 'admin_user:manage_admin_role' %}"
+          >Manage Admin Roles</a></li>
       <li class="list-group-item">Fourth item</li>
     </ul>
   </div>
