implemented property name wise search functionality

--- a/RealEstateApp/templates/home.html
+++ b/RealEstateApp/templates/home.html
@@ -46,4 +46,24 @@
 
 </form>
 </div>
+
+<div class="container">
+  <form class="d-flex" action="/searchpropertyname/">
+    <input
+    name="property"
+    class=" mt-2"
+    type="text"
+    placeholder="Property"
+    style="width: 60%"
+  />
+   <button
+    class="btn btn-lg"
+    type="submit"
+    value="search"
+    style="width: 200px; height: 30px"
+  >
+    Search
+  </button>
+  </form>
+</div>
 {% endblock %}
