--- a/AdminUser/templates/admin/adminPanel.html
+++ b/AdminUser/templates/admin/adminPanel.html
@@ -19,7 +19,10 @@
           class="text-decoration-none"
           href="{% url 'admin_user:manage_admin_role' %}"
           >Manage Admin Roles</a></li>
-      <li class="list-group-item">Fourth item</li>
+      <li class="list-group-item"><a
+          class="text-decoration-none"
+          href="{% url 'admin_user:normal_user' %}"
+          >Normal users</a></li>
     </ul>
   </div>
   <div class="col-sm-9" style="background-color: #ffe6e6">
