Implemented to add normal user to admin user by admin users only

--- a/AdminUser/templates/admin/adminPanel.html
+++ b/AdminUser/templates/admin/adminPanel.html
@@ -21,7 +21,7 @@
           >Manage Admin Roles</a></li>
       <li class="list-group-item"><a
           class="text-decoration-none"
-          href="{% url 'admin_user:normal_user' %}"
+          href="{% url 'admin_user:normal_users' %}"
           >Normal users</a></li>
     </ul>
   </div>
