--- a/AdminUser/templates/admin/users/list_users.html
+++ b/AdminUser/templates/admin/users/list_users.html
@@ -19,7 +19,7 @@
       <td>{{user.email}}</td>
       <td>
          <a class="text-decoration-none" href="{% url 'admin_user:convert_admin_from_normal_user' pk=user.id %}">Add admin</a> 
-        <a class="text-decoration-none" href="">Delete Users</a>
+        <a class="text-decoration-none" href="{% url 'admin_user:delete_users_by_admin' pk=user.id %}">Delete</a>
       </td>
     </tr>
     {% endfor %}
