why us page added successfully

--- a/BookingApp/templates/bookingpage/base.html
+++ b/BookingApp/templates/bookingpage/base.html
@@ -12,7 +12,8 @@
    <link rel="stylesheet" href="{% static 'css/booking_table.css' %}"/>
    <link rel="stylesheet" href="{% static 'css/footer.css' %}"/>
     <link rel="stylesheet" href="{% static 'css/contact.css' %}"/>
-
+    <link rel="stylesheet" href="{% static 'css/why_us.css' %}"/>
+  
    <!-- cntact -->
    <link rel="stylesheet" href="{% static 'css/contact.css' %}"/>
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
