--- a/BookingApp/templates/bookingpage/footer.html
+++ b/BookingApp/templates/bookingpage/footer.html
@@ -8,7 +8,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="cta-text">
                                 <h4>Find us</h4>
-                                <span>kolkata,bidhannagar,sec</span>
+                                <span>kolkata,bidhannagar,sector V</span>
                             </div>
                         </div>
                     </div>
@@ -17,7 +17,7 @@
                             <i class="fas fa-phone"></i>
                             <div class="cta-text">
                                 <h4>Call us</h4>
-                                <span>000000000 0</span>
+                                <span>1800500500</span>
                             </div>
                         </div>
                     </div>
@@ -26,7 +26,7 @@
                             <i class="far fa-envelope-open"></i>
                             <div class="cta-text">
                                 <h4>Mail us</h4>
-                                <span>mail@info.com</span>
+                                <span>webkronehotel@info.com</span>
                             </div>
                         </div>
                     </div>
@@ -56,12 +56,12 @@
                                 <h3>Useful Links</h3>
                             </div>
                             <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">about</a></li>
+                                <li><a href="/booking/home1/">Home</a></li>
+                                <li><a href="/booking/why_us/">Why us</a></li>
                                 <li><a href="#">services</a></li>
                                 <li><a href="#">portfolio</a></li>
                                 <li><a href="#">Contact</a></li>
-                                <li><a href="#">About us</a></li>
+                                <li><a href="/booking/contact/">About us</a></li>
                                 <li><a href="#">Our Services</a></li>
                                 <li><a href="#">Expert Team</a></li>
                                 <li><a href="#">Contact us</a></li>
