--- a/BookingApp/templates/bookingpage/home1.html
+++ b/BookingApp/templates/bookingpage/home1.html
@@ -32,13 +32,13 @@
        <!-- NAVIGATION MENUS -->
        <div class="menu">
          <li><a href="/booking/home1/">Home</a></li>
-         <li><a href="/">About</a></li>
-         <li class="services">
-           <a href="/">Services</a>
+         <li><a href="/booking/why_us/">Why Us</a></li>
+         <!-- <li class="services">
+           <a href="/">Services</a> -->
            <!-- DROPDOWN MENU -->
            
-         </li>
-         <li><a href="/">Hotel list</a></li>
+         <!-- </li>
+         <li><a href="/">Hotel list</a></li> -->
          <li><a href="/booking/contact/">Contact</a></li>
        </div>
      </ul>
