--- a/RealEstateApp/templates/property/search_property.html
+++ b/RealEstateApp/templates/property/search_property.html
@@ -1,5 +1,4 @@
-{% include 'base.html' %} {% block content %}
-
+{% include 'base.html' %}  {% block content %}
 <hr />
 <h1 class="text-center">List Of Properties</h1>
 <hr />
@@ -40,5 +39,5 @@
     {% endfor %}
   </div>
 </div>
-
+{% include 'home/footer.html' %} 
 {% endblock %}
