--- a/RealEstateApp/templates/base.html
+++ b/RealEstateApp/templates/base.html
@@ -1,55 +1,58 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+ <head>
+   <meta charset="UTF-8" />
+   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link rel="stylesheet" href="{% static 'css/navbar.css' %}"/>
+   <link rel="stylesheet" href="{% static 'css/img_slider.css' %}"/>
+   <link rel="stylesheet" href="{% static 'css/booking_table.css' %}"/>
+   <link rel="stylesheet" href="{% static 'css/footer.css' %}"/>
+   <link rel="stylesheet" href="{% static 'css/recommended.css' %}"/>
+   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
-    <!-- Bootstrap CSS -->
-    <link
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-<style>
-    {% block style %} {% endblock %}
-    </style>
-    <title>{% block title %} {% endblock %}</title>
-  </head>
-  <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">RealeState</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse " id="navbarScroll">
-      <ul class="navbar-nav my-2 my-lg-0 navbar-nav-scroll  ms-auto" style="--bs-scroll-height: 100px;">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link" href="#">Link</a>
-          
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
-            </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-    {% block content %} {% endblock %}
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-    {% block javascript %} {% endblock %}
-
-  </body>
+      crossorigin="anonymous"/>
+   <title>Document</title>
+ </head>
+ <body>
+  <div>
+   <nav class="navbar">
+     <!-- LOGO -->
+     <div class="logo">Hotel Booking</div>
+     <!-- NAVIGATION MENU -->
+     <ul class="nav-links">
+       <!-- <label for="checkbox_toggle" class="hamburger">&#9776;</label> -->
+       <!-- NAVIGATION MENUS -->
+       <div class="menu">
+         <li><a href="/booking/home1/">Home</a></li>
+         <li><a href="/">About</a></li>
+         <li class="services">
+           <a href="/">Services</a>
+           <!-- DROPDOWN MENU -->
+           
+         </li>
+         <li><a href="/">Hotel list</a></li>
+         <li><a href="/booking/contact/">Contact</a></li>
+       </div>
+     </ul>
+   </nav>
+ </div>
+ 
+  
+   {% include 'home/img_slider.html' %}
+   {% comment %} 
+   {% include 'bookingpage/recommended.html' %}
+    {% endcomment %}
+    {% block content %}
+ 
+   {% endblock %}
+  
+ </body>
 </html>
