added mostviewed property in home page

--- a/RealEstateApp/templates/booking/booking_table.html
+++ b/RealEstateApp/templates/booking/booking_table.html
@@ -28,8 +28,8 @@
                                             <button type="submit" class="btn btn-primary tm-btn-search">Check Availability</button>
                                         </div>
                                       </div>
-                                      <div class="form-row clearfix pl-2 pr-2 tm-fx-col-xs">
-                                          <p style="color:red; class="tm-margin-b-0">Hotel booking.</p>
+                                      <div class="form-row clearfix pl-2 pr-2 tm-fx-col-xs " style="margin-bottom : -50px">
+                                          <p style="color:red" class="tm-margin">Hotel booking.</p>
                                           <a href="#" class="ie-10-ml-auto ml-auto mt-1 tm-font-semibold tm-color-primary">Need Help?</a>
                                       </div>
                                 </form>
