--- a/RealEstateApp/templates/property/most_viewed_all_properties.html
+++ b/RealEstateApp/templates/property/most_viewed_all_properties.html
@@ -1,5 +1,5 @@
 {% include 'base.html' %} {% block content %}
-<h1 class="text-center">Most Viewd The Property</h1>
+<h1 class="text-center">Most Viewed The Property</h1>
 <hr />
 <div class="container justify-content-center mt-4">
   <div class="row">
@@ -20,5 +20,5 @@
     {% endfor %}
   </div>
 </div>
-
+{% include 'home/footer.html' %} 
 {% endblock %}
