--- a/RealEstateApp/templates/property/most_viewed_property.html
+++ b/RealEstateApp/templates/property/most_viewed_property.html
@@ -1,5 +1,4 @@
-{% include 'base.html' %} {% block content %}
-<h1 class="text-center">Most Viewd The Property</h1>
+
 <hr />
 <div class="container justify-content-center mt-4">
   <div class="row">
@@ -18,10 +17,9 @@
       </div>
     </div>
     {% if forloop.counter == 4 %}
-       <a href="/mostviewedproperties/" >Read More...</a>
+       <a class="d-flex" href="/mostviewedproperties/" >Read More...</a>
     {% endif %}
     {% endfor %}
   </div>
 </div>
 
-{% endblock %}
