--- a/BookingApp/templates/bookingpage/contact.html
+++ b/BookingApp/templates/bookingpage/contact.html
@@ -227,7 +227,9 @@ textarea:valid+label {
       </div>
     </div>
     <div class="contact-form-wrapper">
+
       <form>
+         {% csrf_token %}
         <div class="form-item">
           <input type="text" name="sender" required>
           <label>Name:</label>
