--- a/BookingApp/templates/bookingpage/img_slider.html
+++ b/BookingApp/templates/bookingpage/img_slider.html
@@ -1,23 +1,17 @@
 {% load static %}
 
-<div class="slideshow-container" style="width:">
+<div class="slideshow-container" style="width:100%">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
   <img src="https://www.berjayahotel.com/sites/default/files/colombo_30.jpg" style="width:100%">
-  <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
   <img src="https://www.gannett-cdn.com/-mm-/05b227ad5b8ad4e9dcb53af4f31d7fbdb7fa901b/c=0-64-2119-1259/local/-/media/USATODAY/USATODAY/2014/08/13/1407953244000-177513283.jpg" style="width:100%">
-  <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="https://thumbs.dreamstime.com/b/hotel-13341433.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
+  <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/1c/f7/8b/38/exterior.jpg?w=900&h=-1&s=1" style="width:100%">
 </div>
 
 </div>
