--- a/RealEstateApp/templates/home/img_slider.html
+++ b/RealEstateApp/templates/home/img_slider.html
@@ -1,24 +1,13 @@
 {% load static %}
 
 <div class="slideshow-container" style="width:">
- {% comment %} {% for property in properties %}
+  {% for property in properties %}
 <div class="mySlides fade">
- 
-  <img src="{% if property.image %}{{property.image.url}}{% endif %}" style="width:100%">
+  <img src="{% if property.property.image %}{{property.property.image.url}}{% endif %}" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
-{% endfor %} {% endcomment %}
-<div class="mySlides fade">
+{% endfor %}
 
-  <img src="https://www.gannett-cdn.com/-mm-/05b227ad5b8ad4e9dcb53af4f31d7fbdb7fa901b/c=0-64-2119-1259/local/-/media/USATODAY/USATODAY/2014/08/13/1407953244000-177513283.jpg" style="width:100%">
-  <div class="text">Caption Two</div>
-</div>
-
-<div class="mySlides fade">
- 
-  <img src="https://thumbs.dreamstime.com/b/hotel-13341433.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
-</div>
 
 </div>
 <br>
