--- a/AdminUser/templates/admin/adminHome.html
+++ b/AdminUser/templates/admin/adminHome.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'adminbase.html' %} {% block content %}
 <nav class="navbar navbar-expand-sm">
   <div class="container-fluid">
     <a class="navbar-brand" href="javascript:void(0)">Logo</a>
@@ -15,6 +15,9 @@
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
             <a class="nav-link" href="javascript:void(0)">Admin Panel</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'home' %}">Goto main site</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/accounts/logout/">Logout</a>
