list out the properties after click hotel list

--- a/RealEstateApp/templates/home.html
+++ b/RealEstateApp/templates/home.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% block content %} 
+ {% include 'home/img_slider.html' %}
  {% include 'booking/booking_table.html' %}
  <section class="bg-light py-4 my-5">
     <div class="container">
