--- a/RealEstateApp/templates/base.html
+++ b/RealEstateApp/templates/base.html
@@ -31,23 +31,24 @@
        <!-- <label for="checkbox_toggle" class="hamburger">&#9776;</label> -->
        <!-- NAVIGATION MENUS -->
        <div class="menu">
-         <li><a href="/">Home</a></li>
-         <li><a href="/">About</a></li>
+         <li><a href="/" class="text-decoration-none">Home</a></li>
+         
          <li class="services">
-           <a href="/">Services</a>
+           <a href="/" class="text-decoration-none">Services</a>
            <!-- DROPDOWN MENU -->
            
          </li>
-         <li><a href="/">Hotel list</a></li>
-         <li><a href="/booking/contact/">Contact</a></li>
+         <li><a href="/listproperty/" class="text-decoration-none">Hotel List</a></li>
+         <li><a href="/" class="text-decoration-none">Why Us</a></li>
+         <li><a href="/booking/contact/" class="text-decoration-none">Contact</a></li>
          {% if user.is_staff %}
-           <li><a href="/adminuser/">Admin Dashboard</a></li>
+           <li><a href="/adminuser/" class="text-decoration-none">Admin Dashboard</a></li>
          {% endif %}
          {% if user.username %}
-          <li><a href="">{{user.username}}</a></li>
-           <li><a href="/accounts/logout/">Signout</a></li>
+          <li><a href="" class="text-decoration-none">{{user.username}}</a></li>
+           <li><a href="/accounts/logout/" class="text-decoration-none">Signout</a></li>
           {% else %}
-          <li><a href="/accounts/login/">Signin</a></li>
+          <li><a href="/accounts/login/" class="text-decoration-none">Signin</a></li>
          {% endif %}
        </div>
      </ul>
@@ -55,7 +56,7 @@
  </div>
 
   
-   {% include 'home/img_slider.html' %}
+  
    {% comment %} 
    {% include 'bookingpage/recommended.html' %}
     {% endcomment %}
