--- a/RealEstateApp/templates/property/list_property.html
+++ b/RealEstateApp/templates/property/list_property.html
@@ -1,7 +1,7 @@
 {% include 'base.html' %} {% block content %}
-<h1 class="text-center">List The Property</h1>
+<h3 class="text-center mt-4">List The Property</h3>
 <hr />
-<div class="container justify-content-center mt-4">
+<div class="container justify-content-center mt-4 mb-4">
   <div class="row">
     {% for property in properties %}
     <div class="card me-2 mt-4" style="width: 12rem">
@@ -15,10 +15,12 @@
         <p class="card-text" style="font-size: 0.6rem">
           R${{property.cost}} Per Night
         </p>
+        <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'realestateapp:detail_property' slug=property.slug %}" >Read more...</a>
+      
       </div>
     </div>
     {% endfor %}
   </div>
 </div>
-
+{% include 'home/footer.html' %}
 {% endblock %}
