--- a/RealEstateApp/templates/property/most_viewed_all_properties.html
+++ b/RealEstateApp/templates/property/most_viewed_all_properties.html
@@ -5,6 +5,8 @@
   <div class="row">
     {% for property in properties %}
     <div class="card me-2 mt-4" style="width: 12rem">
+    <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'realestateapp:detail_property' slug=property.property.slug %}" >
+    
     <img src="{% if property.property.image %}{{ property.property.image.url }}{% endif %}" class="card-img-top mt-2" style="height:200px;width:100%;">
       <div class="card-body">
         <p class="card-text text-danger" style="font-size: 0.6rem">
@@ -16,6 +18,7 @@
           R${{property.property.cost}} Per Night
         </p>
       </div>
+      </a>
     </div>
     {% endfor %}
   </div>
