--- a/AdminUser/templates/admin/adminHome.html
+++ b/AdminUser/templates/admin/adminHome.html
@@ -17,7 +17,7 @@
             <a class="nav-link" href="javascript:void(0)">Admin Panel</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">Goto main site</a>
+            <a class="nav-link" href="{% url 'realestateapp:home' %}">Goto main site</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/accounts/logout/">Logout</a>
